add test deps